[package]
name = "botun-aura-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
libp2p = { version = "0.55.0", features = ["noise", "ping", "tcp", "tokio", "yamux", "gossipsub", "macros", "mdns", "rendezvous"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
